--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile.jpg" alt="">
+                    <img src="evans.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Kizito and I'm a <span class="typing-3"></span></div>
