--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="evans.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Kizito and I'm a <span class="typing-3"></span></div>
+                    <div class="text">I'm Evans and I'm a <span class="typing-3"></span></div>
                     <p>An aspiring software developer.I have the passion for programming since childhood. <br>
                         AS a self taught programmer,self motivated and curious to know what runs behind every digital device.</p>
                     <a href="images/Dramani_Kizito_CV.pdf" download="images/Dramani_Kizito_CV.pdf">Download CV</a>
