--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="contact-content">
                      <!-- Add font awesome icons -->
                  <div class="icons">
-                    <a href="https://github.com/Xenom38" class="fa fa-github"></a>
+                    <a href="https://github.com/Bugrievans" class="fa fa-github"></a>
                     <a href="tel:+233551173098" class="fa fa-phone"></a>
                     <a href="https://www.linkedin.com/in/dramani-kizito-622486209" class="fa fa-linkedin"></a>
                     <a href="https://www.instagram.com/xen_om38?r=nametag" class="fa fa-instagram"></a>
