--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Design By <a href="">Dramani Yinsonte Kizito</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Design By <a href="">Bugri Evans </a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js">
