--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                  <div class="icons">
                     <a href="https://github.com/Bugrievans" class="fa fa-github"></a>
                     <a href="tel:+233551173098" class="fa fa-phone"></a>
-                    <a href="https://www.linkedin.com/in/dramani-kizito-622486209" class="fa fa-linkedin"></a>
+                    <a href="tel:+233551173098" class="fa fa-whatsapp"></a>
                     <a href="https://www.instagram.com/xen_om38?r=nametag" class="fa fa-instagram"></a>
              </div>
                <!-- <div class="column left">
