--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="text">I'm Evans and I'm a <span class="typing-3"></span></div>
                     <p>An aspiring software developer.I have the passion for programming since childhood. <br>
                         AS a self taught programmer,self motivated and curious to know what runs behind every digital device.</p>
-                    <a href="resume.pdf" download="resume.pdf">Download CV</a>
+                    <a href="resume.PDF" download="resume.PDF">Download CV</a>
                 </div>
             </div>
         </div>
