--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <a href="https://github.com/Bugrievans" class="fa fa-github"></a>
                     <a href="tel:+233551173098" class="fa fa-phone"></a>
                     <a href="tel:+233551173098" class="fa fa-whatsapp"></a>
-                    <a href="https://www.instagram.com/xen_om38?r=nametag" class="fa fa-instagram"></a>
+                    <a href="https://www.instagram.com/evansbugri?r=nametag" class="fa fa-instagram"></a>
              </div>
                <!-- <div class="column left">
                     <div class="text">Get in Touch</div>
