--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -277,7 +274,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Design By <a href="">Bugri Evans </a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Designed By <a href="">Dekpelsabilik Evans Bugri </a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js">
