--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Bugri Evans</div>
+                <div class="text-2">Bugri Dekpelsabilik Evans</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
             </div>
@@ -63,7 +63,7 @@
                     <div class="text">I'm Evans and I'm a <span class="typing-3"></span></div>
                     <p>An aspiring software developer.I have the passion for programming since childhood. <br>
                         AS a self taught programmer,self motivated and curious to know what runs behind every digital device.</p>
-                    <a href="resume.PDF" download="resume.PDF">Download CV</a>
+                    <a href="Bugri Evans CV.docx" download="Bugri Evans CV.docx">Download CV</a>
                 </div>
             </div>
         </div>
