--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Designed By <a href="">Dekpelsabilik Evans Bugri </a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Designed By <a href="">Dekpelsabilik Evans Bugri </a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
 
     <script src="script.js">
         var typed = new Typed(".typing", {
-        strings: ["YouTuber", "Developer", "Blogger", "Designer", "Freelancer"],
+        strings: ["Web Developer", "Blogger", "Grahphic Designer", "Freelancer"],
         typeSpeed: 100,
         backSpeed: 60,
         loop: true
